--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
-DISCORD_TOKEN=secret_token_here
-DISCORD_CHANNEL_ID=123456789012345678 # Example channel ID, replace with actual
+DISCORD_TOKEN=discord_bot_token_here
+DISCORD_CHANNEL_ID=1111111 # Example channel ID, replace with actual
+PREFIX=!
 
+IA_API_KEY=api_key_here
+IA_MODEL_NAME=deepseek-r1-distill-llama-70b
+IA_API_URL=https://api.groq.com/openai/v1/chat/completions
